restructuring / refactoring =)