@@ -110,6 +110,7 @@ tasks {
     }
 
     withType<Test> {
+        jvmArgs = listOf("-XX:+EnableDynamicAgentLoading")
         useJUnitPlatform()
     }
 
