@@ -105,6 +105,7 @@ tasks {
     }
 
     withType<Test> {
+        jvmArgs = listOf("-XX:+EnableDynamicAgentLoading")
         useJUnitPlatform()
     }
 
