@@ -77,6 +77,7 @@ tasks {
     }
 
     withType<Test> {
+        jvmArgs = listOf("-XX:+EnableDynamicAgentLoading")
         useJUnitPlatform()
     }
 }
